# This is a list of changes in pygame's history.
#
# CVS tag names are placed before the date
# BREAK = change breaks existing code
# BUG    = fixed a bug that was (or could have been) crashing
#
#
[SVN 2268] May 27, 2009
    updated docs for cursors.load_xbm, thanks Saul Spatz, and Thomas Ibbotson

[SVN 2259] May 26, 2009
    [BUG] surflock.c PySurface_LockBy was leaking weakrefs.
    Thanks Tom Rothamel for the patch!

[SVN 2118] May 12, 2009
    [BUG] Fixed bug in font.c where pygame.font.Font returned the wrong
    exception type and message when a font file was not found.
    Thanks Bo Jangeborg.

[SVN 2114] May 10, 2009
    Add <module>_tags.py modules to pygame.tests. This is an alternative
    module level __tags__ globals in the unit test <module>_test.py files
    themselves. The __tags__ global is placed in the corresponding
    <module>_tags.py file instead. This means test modules can be skipped
    by the pygame.tests.go test framework without actually loading the
    test module and running possibly problematic code. It also means
    the test framework can report on which test modules were skipped
    and why.

[SVN 2104] May 9, 2009
    [BUG] pygame.transform.threshold behaved incorrectly when passed a
    Python long for the threshold argument.

[SVN 2112] May 9, 2009
    Pygame unit test framework now works with Python 3.1. This includes the
    run_tests__tests submodule.

[SVN 2080] May 7, 2009
    Increase timeout limit to 2 min. for run_tests.py subprocesses.
    This allows surface_test.py more time to complete (timed out on
    automated build sites Mac.)

[SVN 2078] May 7, 2009
    All standard Pygame extension modules compile and run with Python 3.
    For a Python 3 build setup.py skips unsupported modules.

[SVN 2075] May 6, 2009
    For OS X Skip scrap test in base_test.py which was causing some unit
    tests to fail. scrap not properly supported on OS X anyway.
 
[SVN 2047] May 1, 2009